; ModuleID = '/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_qman.c_qman_release_pool.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/soc/fsl/qbman/extr_qman.c_qman_release_pool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"CHID %d leaked\0A\00", align 1
@qm_qpalloc = common dso_local global i32 0, align 4
@DPAA_GENALLOC_OFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qman_release_pool(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @qpool_cleanup(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @pr_debug(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %19

13:                                               ; preds = %1
  %14 = load i32, i32* @qm_qpalloc, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @DPAA_GENALLOC_OFF, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @gen_pool_free(i32 %14, i32 %17, i32 1)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %13, %9
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @qpool_cleanup(i32) #1

declare dso_local i32 @pr_debug(i8*, i32) #1

declare dso_local i32 @gen_pool_free(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
